se cambia img background

--- a/src/style.css
+++ b/src/style.css
@@ -138,4 +138,21 @@ p{
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    
+}
+
+#who-we-are{
+    background-image: url(https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/active-dirt-road-effort-1821694.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: #464646;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+.second-nav{
+    background-color: white;
 }
