--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
 
 }
 
-#we, #products, #recipies, #contact-us, #distribute{
+#we, #products, #recipes, #contact-us, #distribute{
 margin-top:40px;
 font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-style: normal;
@@ -21,7 +21,7 @@ font-size: 14px;
 color: #FFFFFF;
 }
 
-#we2, #products2, #recipies2, #contact-us2, #distribute2{
+#we2, #products2, #recipes2, #contact-us2, #distribute2{
     margin-top:40px;
     font-family: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
@@ -40,7 +40,7 @@ color: #FFFFFF;
     width: 140px;
 }
 
-#products2, #recipies2, #contact-us2,#products, #recipies, #contact-us{
+#products2, #recipes2, #contact-us2,#products, #recipes, #contact-us{
     margin-left:20px;
 }
 
@@ -83,7 +83,7 @@ nav{
     height: 80px;
 }
 
-h3{
+h3,h4{
 font-family:Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 font-style: normal;
 font-weight: normal;
@@ -94,10 +94,10 @@ color: #464855;
 margin-top:100px;
 }
 
-h6, .paragraph,,{
+h6, .paragraph,.recipe-p{
     text-align: center;
     margin-left: 37px;
-    color: #464855;
+    color:#464855;
     
 }
 
@@ -141,8 +141,8 @@ p{
     
 }
 
-#who-we-are{
-    background-image: url(https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/active-dirt-road-effort-1821694.jpg);
+#products-card{
+    background-image: url(https://raw.githubusercontent.com/FranciscaMora/scl-2018-02-ux-marketplace/master/src/img/web-imgs/crossfit-dumbbell-equipment-669578.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -151,8 +151,72 @@ p{
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    margin-top:110px;
+}
+
+#crunchy-card,#classic-card{
+margin-top: 40px;
 }
 
 .second-nav{
     background-color: white;
+}
+
+footer{
+    margin-top:200px;
+    width: 100%;
+    height: auto;
+    background-color: #74492C;
+    
+}
+
+/* 2AA1EF */
+
+.card .card-content .card-title{
+    color:black;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size:18px;
+}
+
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating){
+    color:#2AA1EF;
+}
+
+#protein-bar{
+    margin-top:-220px;
+}
+
+#reload{
+    color:blue;
+    text-align: center;
+}
+
+/* #sorry{
+    text-align: center;
+    color:#464646;
+} */
+
+.more{
+    color:#2AA1EF;
+    background-color: white;
+    border-color: #2AA1EF;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 2px;
+}
+
+.buy{
+    color:white;
+    background-color: #2AA1EF;
+}
+
+.card-action{
+    margin-left:35px;
+}
+
+.card-content{
+    text-align: left;
+}
+.price{
+    font-size:16px;
 }
